--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <body>
 
     <section class="conteudo-principal">
-      <script src="main.js"></script>
+     
     <h2 class="titulo-principal">Meus Objetivos do ano_</h2>
     <div class="botoes">
-
-        <button class="botao">Cursos na Alura</button>
+        <button class="botao ativo">Cursos na Alura</button>
         <button class="botao">Criar projetos em JavaScript</button>
         <button class="botao">Criar um portfólio</button>
         <button class="botao">Atualizar meu currículo</button>
+      
     </div>
 </section>
-
+<script src="main.js"></script>
 
 
 
